# nicla_vision_ros2

./: CHANGELOG.rst  CITATION.cff  CMakeLists.txt  LICENSE  README.md  package.xml
config/: gz_bridge.yaml
config/rviz/: nicla.rviz
launch/: nicla_receiver.launch  nicla_sim.launch.py  nicla_sim.py  spawn_nicla.py
msg/: AudioDataStamped.msg
nicla_vision_ros2/: NiclaReceiverServer.py  NiclaRosPublisher.py  __init__.py
nicla_vision_ros2_py/: NiclaReceiverServer.py  NiclaReceiverServerMicroPy.py  NiclaRosPublisher.py  NiclaRosPublisherMicroPy.py  SpeechRecognizer.py  __init__.py
pure_python_package/: package.xml  setup.cfg  setup.py
scripts/: nicla_receiver  nicla_receiver_micropy
urdf/: nicla.urdf.xacro  nicla_macro.urdf.xacro
